--- a/index.html
+++ b/index.html
@@ -3,17 +3,53 @@
   <head>
     <title>cash counter</title>
     <meta charset="UTF-8" />
+    <style>
+      /* h1{
+        width: 90%;
+        height: 80px;
+        margin: 1rem;
+        text-align: center;
+        background-color: chocolate;
+        padding-top: 15px;
+      } */
+      .container{
+        width: 50%;
+        height: 35rem;
+        margin: 1rem auto;
+        text-align: center;
+        background-color: rgb(243, 112, 19);
+      }
+      input{
+        margin: 2rem;
+      }
+      button{
+        border: 1px solid black;
+        letter-spacing: 2px;
+        color: rgb(243, 112, 19);
+        padding: 6px;
+        border-radius: 10px;
+         font-weight: bolder; 
+         margin-bottom: 1rem;
+      }
+      #output-div{
+        color: white;
+        letter-spacing: 2px;
+        font-weight: bolder;
+      }
+
+    </style>
   </head>
 
   <body>
-    <div id="app"></div>
-
+ 
+    <div class="container">
     <h1>cash counter application</h1>
     <hr />
-    enter bill amount:<input type="text" id="bill-amount" /> enter amount
+    
+    enter bill amount:<input type="text" id="bill-amount" /> <br>enter amount
     paid:<input type="text" id="amount-paid" />
+    <br><button onclick="countNotes();">submit</button>
     <div id="output-div"></div>
-    <button onclick="countNotes();">submit</button>
-  </body>
+  </div></body>
   <script src="cash.js"></script>
 </html>
