refactor: optimised code

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     
     enter bill amount:<input type="text" id="bill-amount" /> <br>enter amount
     paid:<input type="text" id="amount-paid" />
-    <br><button onclick="countNotes();">submit</button>
-    <div id="output-div"></div>
+    <br><button id="button">submit</button>
+    <div id="output-div">hello</div>
   </div></body>
   <script src="cash.js"></script>
 </html>
